--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,14 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web'  // 웹 서버 기능을 수행하기 위한 라이브러리 모음
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 데이터베이스에 java가 접속할 수 있게 해주는 드라이버
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // Spring Data Jpa를 사용하기 위한 기본 라이브러리 모음
 }
 
 tasks.named('test') {
