--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CRUDBoard
 
-spring.datasource.url=jdbc:mysql://localhost:3306/CRUD_DB?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/CRUD_DB?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=yuljeon2018
 
